	* slightly improve proxy settings backwards compatibility
	* add function to get default settings
	* updating super seeding would include the torrent in state_update_alert
	* fix issue where num_seeds could be greater than num_peers in torrent_status
	* finished non-seed torrents can also be in super-seeding mode
	* fix issue related to unloading torrents
	* fixed finished-time calculation
	* add missing min_memory_usage() and high_performance_seed() settings presets to python
	* fix stat cache issue that sometimes would produce incorrect resume data
	* storage optimization to peer classes
	* fix torrent name in alerts of builds with deprecated functions
	* make torrent_info::is_valid() return false if torrent failed to load
	* fix per-torrent rate limits for >256 peer classes
	* don't load user_agent and peer_fingerprint from session_state
	* fix file rename issue with name prefix matching torrent name
	* fix division by zero when setting tick_interval > 1000
	* fix move_storage() to its own directory (would delete the files)
	* fix socks5 support for UDP
	* add setting urlseed_max_request_bytes to handle large web seed requests
	* fix python build with CC/CXX environment
	* add trackers from add_torrent_params/magnet links to separate tiers
	* fix resumedata check issue with files with priority 0
	* deprecated mmap_cache feature
	* add utility function for generating peer ID fingerprint
	* fix bug in last-seen-complete
	* remove file size limit in torrent_info filename constructor
	* fix tail-padding for last file in create_torrent
	* don't send user-agent in metadata http downloads or UPnP requests when
	  in anonymous mode
	* fix internal resolve links lookup for mutable torrents
	* hint DHT bootstrap nodes of actual bootstrap request

1.1.1 release

	* update puff.c for gzip inflation
	* add dht_bootstrap_node a setting in settings_pack (and add default)
	* make pad-file and symlink support conform to BEP47