@@ -1,3 +1,4 @@
+	* add web_seed_name_lookup_retry to session_settings
 	* slightly improve proxy settings backwards compatibility
 	* add function to get default settings
 	* updating super seeding would include the torrent in state_update_alert
